# micrograd

./: .gitignore  CMakeLists.txt  README.md
include/micrograd/: Backend.h  Tensor.h  Utils.h  mnist.h  nn.h
include/micrograd/metal/: Dispatch.h  Kernels.h  MetalContext.h
src/: Tensor.cpp  Utils.cpp  main.cpp  mnist.cpp  nn.cpp
src/core/: Autograd.cpp  Tensor.cpp
src/metal/: Dispatch.cpp  Kernels.cpp  MetalContext.cpp  TensorMetal.cpp
src/ops/: Activations.cpp  Arithmetic.cpp  Matmul.cpp  Reduction.cpp
test/: tensor_test.cpp
